assets/styles/style.css
/* ... */
		.wysiwyg input[type="submit"]:hover{
			filter: blur( 3px );
		}
		.wysiwyg input:focus{
			-webkit-box-shadow: 0px 0px 0.5px 0.25px rgba( 75, 75, 75, 0.1 ),
									0px 0px 15px 3px rgba(90,90,90,0.5);
			-moz-box-shadow: 0px 0px 0.5px 0.25px rgba( 75, 75, 75, 0.1 ),
									0px 0px 15px 3px rgba(90,90,90,0.5);
			box-shadow: 0px 0px 0.5px 0.25px rgba( 75, 75, 75, 0.1 ),
									0px 0px 15px 3px rgba(90,90,90,0.5);
		}
	.wysiwyg input:focus{
		outline: none;

	}

.wysiwyg img{
	display: block;
	max-width: 100%;
	height: auto;
}
.wysiwyg iframe{
	display: block;
}

	a.no-decoration-link{
		text-decoration: none;
	}

	.wysiwyg a.image-link{
		border-bottom: none;
	}

		a::selection{
			text-decoration: none !important;
			opacity: 1;
			background: transparent;
		}

		a::-moz-selection {
			text-decoration: none !important;
			opacity: 1;
			background: transparent;
		}

	::-moz-selection {
		color: rgba( 170, 170, 170, 1 );
		background: transparent;
		text-decoration: none !important;
	}
	::selection {
		color: rgba( 170, 170, 170, 1 );
		background: transparent
		text-decoration: none !important;
	}

/* collapsible panels */
.collapsible-panel{
	overflow: visible;
}
	.collapsible-panel--content{
		overflow: visible;
	}
	.collapsible-panel.collapsed .collapsible-panel--content{
		height: 0;
		overflow: hidden;
	}
	.collapsible-panel--toggle{
		cursor: pointer;
		transition: filter .3s ease-in-out;
	}
		@media (min-width: 721px){
			.collapsible-panel--toggle:hover{
				filter: blur(3px);
			}
		}
	.collapsible-panel .collapsible-panel--toggle:after{
		content: 'Less ↑';
	}
		.collapsible-panel.collapsed .collapsible-panel--toggle:after{
			content: 'More ↓';
		}

/* loading */
body.loading .dc-site-loader{
	opacity: 1;
}
	.dc-site-loader{
		width: 100%;
		height: 100%;
		position: fixed;
		top: 0;
		left: 0;
		z-index: 90;
		background: #ffffff;
		pointer-events: none;
		opacity: 0;
		transition: opacity .3s ease-in-out;
	}
body.loading .committee-header{
	opacity: 0;
}

body.loading .dc-site-contents,
body.loading .layer{
	opacity: 0;
}
	.dc-site-contents,
	.layer{
		transition: opacity .3s ease-in-out;
		transition-delay: .05s;
	}

@media (min-width: 721px){
			.dc-slideshow .dc-slideshow--prev:after,
			.dc-slideshow .dc-slideshow--next:after{
				filter: blur( 3px );
				transition: filter .3s ease-in;
			}
			.dc-slideshow .dc-slideshow--prev:hover:after,
			.dc-slideshow .dc-slideshow--next:hover:after{
				filter: blur( 0 );
			}

			.wysiwyg a,
			a.text-link,
			.wysiwyg a img{
				transition: filter .3s ease-in;
			}
			.wysiwyg a:hover,
			a.text-link:hover,
			.wysiwyg a:hover img{
				filter: blur( 3px );
				transition: filter .3s ease-in;
			}
}


/* simplesite tabs */
@media (max-width: 720px ){
	.theme  .theme--follower{
		pointer-events: none;
	}
	.theme.tabs--top-theme{
		z-index: 5;
	}
	.theme.tabs--top-theme .theme--follower{
		pointer-events: all;
	}
		.layer__committee{
			pointer-events: none;
			transition: none;
		}
		.layer__committee.tabs--top-theme{
			z-index: 10;
			opacity: 1 !important;
			pointer-events: all !important;
		}
	.about-fake-tabs{
		z-index: 99;
		position: relative;
	}
	.about-fake-tabs .theme{
		height: 2.4rem;
	}
}

/* mailchimp specific stuff */
#mc_embed_signup .indicates-required{
	display: none;
}
	#mc_embed_signup .asterisk{
		font-size: .6rem;
		line-height: 1.5;
		position: absolute;
		right: 0;
	}
.mc-field-group{
	position: relative;
	margin-bottom: 1rem;
}
div.mce_inline_error{
	background: transparent !important;
	color: inherit !important;
	font-weight: normal !important;
	padding: .2rem 0 !important;
	right: 0;
	font-size: .6rem;
	position: absolute;
	bottom: -1.6rem;
}

/* DC logo in quadrants instead of close*/
.quadrant-wrapper .project-section__close a,
.quadrant-wrapper .post-section__close a{
	display: block;
	background-image: url('../svg/demystification-committee-logo-sprite-horizontal.svg');
	width: 100%;
	background-size: auto 3.8rem;
	background-repeat: no-repeat;
	background-position: -1.9rem top;
	height: 1.4rem;
	font-size: 0;
	margin-top: 3px;
}
.quadrant-wrapper .project-section__close a:hover,
.quadrant-wrapper .post-section__close a:hover{
	filter: none;
}
	.quadrant-wrapper  .project-section__close[data-proportion="small"] a,
	.quadrant-wrapper  .post-section__close[data-proportion="small"] a{
		background-position: 0 top;
		width: 1.8rem;
	}
.quadrant-wrapper__network-ensemble .project-section__close a,
.quadrant-wrapper__network-ensemble .post-section__close a{
	background-position: -1.9rem -1.5rem;
}
.quadrant-wrapper__network-ensemble .project-section__close[data-proportion="small"]	 a,
.quadrant-wrapper__network-ensemble .post-section__close[data-proportion="small"] a{
	background-position: 0 -1.5rem;
	width: 1.8rem;
}

	@media (max-width: 720px){
		.quadrant-wrapper .project-section__close a,
		.quadrant-wrapper .post-section__close a{
			background-position: 0 top;
			width: 1.8rem;
			height: 1rem;
		}
		.quadrant-wrapper__network-ensemble .project-section__close a,
		.quadrant-wrapper__network-ensemble .post-section__close a{
			background-position: 0 -1.5rem;
			width: 1.8rem;
		}
	}

